# audio2ay

./: .gitignore  README.md  batch_preview.bat  import_time.txt  pip.conf  pyproject.toml
design/: plan.md
doc/: README.md  cli.md  contributing.md  fidelity.md
scripts/: compare_ab.py  debug_gui_worker.py  make_samples.py
src/audio2ay/: __init__.py  cli.py  pipeline.py
src/audio2ay/analysis/: amplitude.py  audio_in.py  drums.py  multipitch.py  separation.py  timeline.py
src/audio2ay/io/: ay_emulator.py  ym_writer.py
src/audio2ay/synth/: frame_builder.py  hw_envelope.py  noise_mapper.py  pitch_quantizer.py  registers.py  voice_scheduler.py  volume_quantizer.py
src/audio2ay/validate/: gui.py
tests/: test_pipeline_smoke.py  test_pitch_quantizer.py  test_round_trip.py  test_volume_quantizer.py  test_ym_writer.py
